fixing overflow-x style

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,6 +7,7 @@ $secondary-font: 'Lato', sans-serif;
 * {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
   box-sizing: border-box;
 }
 
